--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport">
@@ -8,7 +9,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="h1" id="h1">Hello world !</h1>>
-    <h1 class="h2">Hello world 2 !</h1>
+    <div class="main-container">
+        <header>Header</header>
+
+        <div class="cards-container">
+            <div class="card-item">
+                <div class="card-header">
+                    <div class="card-header-title"></div>
+                    <div class="card-header-icon"></div>
+                </div>
+                <div class="card-body">
+                    <div class="card-body-checkbox"></div>
+                    <div class="card-body-title"></div>
+                </div>
+                <div class="card-footer">
+                    <input type="text">
+                </div>
+            </div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+
+        </div>
+    </div>
 </body>
 </html>
